login/register web-form

--- a/templates/login.html
+++ b/templates/login.html
@@ -42,6 +42,10 @@
             {
             padding:0;
             }
+        .error
+            {
+            color:red;
+            }
     </style>
 </head>
 <body>
