--- a/templates/user.html
+++ b/templates/user.html
@@ -8,13 +8,13 @@
 <h2>Projects</h2>
 <ul>
 {%for i in projects%}
-    <li>{{i}}</li>
+    <li><a href={{i}}>{{i}}</a></li>
 {%endfor%}
 </ul>
 <h2>Subtasks</h2>
 <ul>
 {%for i in subtasks%}
-    <li>{{i}}</li>
+    <li><a href={{i}}>{{i}}</a></li>
 {%endfor%}
 </ul>
 <h2>QA tasks</h2>
