stub data for user and project forms

--- a/templates/project.html
+++ b/templates/project.html
@@ -41,6 +41,13 @@
 	    </form>
     </li>
     {%endif%}
+    <li><a href=#zip>upload/download</a>
+        <form method="POST">
+            <input type="file" name="zip" placeholder="Upload as zip">
+            <input type="submit">
+            <br><a href=".?mode=zip">Download as zip</a>
+        </form>
+    </li>
   </ul>
 </body>
 </html>
