--- a/templates/user.html
+++ b/templates/user.html
@@ -29,6 +29,7 @@
         </li>
         <li id="qa">
             <a href="#qa">QA tasks</a>
+            <!-- qa tasks interactive check using websockets... -->
             <ul>
                 {%for i in qatasks%}
                 <li>{{i}}</li>
