--- a/templates/file.html
+++ b/templates/file.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>{{fname}}</title>
-    <link rel=stylesheet href=static/style.css>
+    <link rel=stylesheet href=/static/style.css>
 </head>
 <body>
 {%if error%}<div class="error">{{error}}</div>{%endif%}
