--- a/templates/login.html
+++ b/templates/login.html
@@ -5,10 +5,10 @@
     <title>Log in or Register</title>
     <link rel=stylesheet href=static/style.css>
     <style>
-        {%if not register%}
-        .tabs li:first-child form
+        {%if register%}
+        .tabs li form
             {
-            z-index:10;
+            z-index:15;
             }
         {%endif%}
     </style>
