--- a/templates/project.html
+++ b/templates/project.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>{{user}} &gt; {{project}}</title>
-    <link rel=stylesheet href=static/style.css>
+    <link rel=stylesheet href=../../static/style.css>
 </head>
 <body>
     <h1>{{user}} &gt; {{project}}</h1>
