--- a/templates/user.html
+++ b/templates/user.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>{{user}}</title>
-    <link href="static/style.css" rel="stylesheet">
+    <link href="../static/style.css" rel="stylesheet">
 </head>
 <body>
     <ul class="tabs">
