--- a/templates/user.html
+++ b/templates/user.html
@@ -6,6 +6,7 @@
     <link href="../static/style.css" rel="stylesheet">
 </head>
 <body>
+{%if error%}<div class="error">{{error}}</div>{%endif%}
     <ul class="tabs">
         <li id="projects">
             <a href="#projects">Projects</a>
