--- a/templates/file.html
+++ b/templates/file.html
@@ -16,13 +16,13 @@
     </li>
     <li id=renmov><a href=#renmov>Rename/move</a>
     <form method=POST>
-        <input name=filepath value="{{file}}"><br>
+        <input name=renmov value="{{fname}}"><br>
         <input type=submit>
     </form>
     </li>
     <li id=load><a href=#load>upload/download</a>
         <form method="POST">
-            <input type="file" name="zip" placeholder="Upload">
+            <input type="file" name="rawfile" placeholder="Upload">
             <input type="submit">
             <br><a href=".?mode=raw">Download</a>
         </form>
