--- a/templates/project.html
+++ b/templates/project.html
@@ -42,7 +42,8 @@
     <li id=test><a href=#test>Test report</a>
 	    <form method=POST action=build/{{testbuild}}>
 		<textarea name=testreport></textarea>
-		<input type=submit>
+		<br><input type=checkbox name=ok value=ok>Test is OK, no errors detected
+		<br><input type=submit>
 	    </form>
     </li>
     {%if reports%}
@@ -58,10 +59,20 @@
     {%endif%}
     <li id=load><a href=#load>upload/download</a>
         <form method="POST">
-            <input type="file" name="zip" placeholder="Upload as zip">
+            <input type="file" name="zipfile" placeholder="Upload as zip">
             <input type="submit">
             <br><a href=".?mode=zip">Download as zip</a>
         </form>
+    </li>
+    <li id=build><a href=#build>Build/integrate</a>
+      <form method=POST>
+    	<input type=radio name=action value=build checked>Create test build<br>
+    	<input type=radio name=action value=integrate>Integrate this implementation into your project<br>
+    	Target project:<select name=target>
+    		<option value=user1/project>user1/project</option>
+    		<option value=user1/testcase>user1/testcase</option>
+    	</select>
+      </form>
     </li>
   </ul>
 </body>
