--- a/templates/project.html
+++ b/templates/project.html
@@ -44,6 +44,7 @@
 		<textarea name=testreport></textarea>
 		<br><input type=checkbox name=ok value=ok>Test is OK, no errors detected
 		<br><input type=submit>
+        <br><a href=".?watch=true">Watch this project</a>
 	    </form>
     </li>
     {%if reports%}
