--- a/templates/user.html
+++ b/templates/user.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>{{user}}</title>
     <link href="../static/style.css" rel="stylesheet">
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
 </head>
 <body>
 {%if error%}<div class="error">{{error}}</div>{%endif%}
