--- a/templates/file.html
+++ b/templates/file.html
@@ -17,6 +17,7 @@
     <li id=renmov><a href=#renmov>Rename/move</a>
     <form method=POST>
         <input name=renmov value="{{fname}}"><br>
+        <input name="action" value="remove" type=submit>
         <input type=submit>
     </form>
     </li>
