--- a/templates/user.html
+++ b/templates/user.html
@@ -17,6 +17,12 @@
                     <a href="{{i}}">{{i}}</a>
                 </li>
                 {%endfor%}
+                <li>
+			<form method=GET>
+				<input name=newproject placeholder="Add new project">
+				<input type=submit>
+			</form>
+                </li>
             </ul>
         </li>
         <li id="subtasks">
