--- a/static/style.css
+++ b/static/style.css
@@ -7,7 +7,8 @@
     position:absolute;
     top:20px;
     left:10px;
-    z-index:9;
+    z-index:9;    
+    transition: all 0s linear 0.3s;
     }
 .tabs>li>ul
     {
