--- a/templates/user.html
+++ b/templates/user.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 {%if error%}<div class="error">{{error}}</div>{%endif%}
+<h1><span class=user-ref>{{user}}</span></h1>
     <ul class="tabs">
         <li id="projects">
             <a href="#projects">Projects</a>
